# cherishpack

./: .gitignore  LICENSE  README.md
docs/: operator-guide.md
installer/: Cargo.toml  build.ps1  build.rs
installer/resources/: README.md  app.manifest
installer/src/: apply_preset.rs  boot_agent.rs  channel.rs  config.rs  crash.rs  gui.rs  hash.rs  hwdetect.rs  java.rs  logger.rs  main.rs  migrate.rs  mrpack.rs  net.rs  options_fixup.rs  orchestrator.rs  patch_early_display.rs  patcher.rs  paths.rs  preserve.rs  preset.rs  prism.rs  shortcut.rs  state.rs  uninstall.rs
installer/src/launcher/: assets.rs  cache.rs  dirs.rs  libraries.rs  meta.rs  mod.rs  natives.rs  neoforge.rs  orchestrator.rs  run.rs
installer/src/launcher/auth/: account.rs  mod.rs  msa.rs  offline.rs
manifest-builder/: Cargo.toml
manifest-builder/src/: main.rs
pack-source/: README.md
