[package]
name = "cherishpack-manifest-builder"
version = "0.1.0"
edition = "2021"
description = "pack-source → .mrpack + manifest.json 생성 보조 CLI"
license = "MIT"

[[bin]]
name = "cherishpack-manifest-builder"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
